<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="@dimen/dimen_288dp"
            android:layout_height="@dimen/dimen_51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_82dp"
            android:src="@drawable/ic_kredily" />

        <LinearLayout
            android:id="@+id/layout_parent_login_fields"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_64dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_modal"
            android:orientation="vertical"
            android:padding="@dimen/dimen_32dp">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_welcome"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/dimen_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_please_enter_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:maxLines="2"
                android:text="@string/label_please_enter_details"
                android:textColor="@color/color_secondary_text"
                android:textSize="@dimen/dimen_14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    style="@style/EmailTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    style="@style/PasswordTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:padding="@dimen/dimen_16dp"
                android:text="@string/btn_log_in"
                android:textColor="@color/color_button_text"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="@dimen/dimen_16dp" />

            <Button
                android:id="@+id/btn_log_in_with_otp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:padding="@dimen/dimen_16dp"
                android:text="@string/btn_log_in_with_otp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                app:rippleColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>
</layout>