<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <ImageView
            android:id="@+id/img_btn_back"
            android:layout_width="@dimen/dimen_32dp"
            android:layout_height="@dimen/dimen_32dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_primary_text" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:singleLine="true"
            android:text="@string/label_settings"
            android:textColor="@color/color_primary_text"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_btn_back"
            app:layout_constraintTop_toTopOf="@id/img_btn_back" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="img_btn_back,txt_title" />

        <ImageView
            android:id="@+id/img_offices"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_offices"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_header" />

        <TextView
            android:id="@+id/txt_company_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:singleLine="true"
            android:text="@string/label_company_name"
            android:textColor="@color/color_primary_text"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_admin_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_offices"
            app:layout_constraintTop_toTopOf="@id/img_offices"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_admin_id"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:singleLine="true"
            android:text="@string/label_admin_id"
            android:textColor="@color/color_secondary_text"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_offices"
            app:layout_constraintEnd_toEndOf="@id/txt_company_name"
            app:layout_constraintStart_toStartOf="@id/txt_company_name"
            app:layout_constraintTop_toBottomOf="@id/txt_company_name" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_company_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="img_offices,txt_company_name,txt_admin_id" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_settings"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginVertical="@dimen/dimen_32dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btn_log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_company_details"
            tools:itemCount="2"
            tools:listitem="@layout/layout_settings_adapter_item" />


        <Button
            android:id="@+id/btn_log_out"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/btn_log_out"
            android:textColor="@color/color_error"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/color_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>