<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <EditText
            android:id="@+id/edit_search_employee"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:background="@drawable/bg_border_frame"
            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/hint_search_employee"
            android:imeOptions="actionDone"
            android:paddingHorizontal="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_8dp"
            android:singleLine="true"
            android:textColor="@color/color_secondary_text"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold"
            app:drawableTint="@color/color_secondary_text"
            app:layout_constraintEnd_toStartOf="@id/img_btn_settings"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_btn_settings"
            android:layout_width="@dimen/dimen_32dp"
            android:layout_height="@dimen/dimen_32dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="@id/edit_search_employee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_search_employee"
            app:layout_constraintTop_toTopOf="@id/edit_search_employee"
            app:tint="@color/color_primary_text" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="edit_search_employee,img_btn_settings" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_filter_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_12dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_header"
            tools:itemCount="3"
            tools:listitem="@layout/layout_filter_options_adapter_item" />

        <TextView
            android:id="@+id/txt_btn_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/btn_clear_all"
            android:textColor="@color/color_primary_text"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/recycler_filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/recycler_filters" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_filters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_4dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_btn_clear_all"
            app:layout_constraintTop_toBottomOf="@id/recycler_filter_options"
            tools:itemCount="3"
            tools:listitem="@layout/layout_filters_adapter_item" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="recycler_filter_options,txt_btn_clear_all,recycler_filters" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/mtb_toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:padding="@dimen/dimen_8dp"
            app:checkedButton="@id/btn_total"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_filters"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/btn_total"
                style="@style/SegmentButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                tools:text="@string/label_total" />

            <Button
                android:id="@+id/btn_unconfigured"
                style="@style/SegmentButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/label_unconfigured" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_employee"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/dimen_82dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtb_toggle_group"
            tools:itemCount="5"
            tools:listitem="@layout/layout_employee_adapter_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20sp"
            android:visibility="gone"
            app:backgroundTint="@color/colorAccent"
            app:fabCustomSize="@dimen/dimen_80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/SquareFAB"
            app:srcCompat="@drawable/ic_camera"
            app:tint="@color/color_background" />

        <LinearLayout
            android:id="@+id/parent_layout_error"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:background="@color/color_background"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dimen_64dp"
                android:layout_height="@dimen/dimen_64dp"
                android:src="@drawable/ic_error"
                app:tint="@color/color_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="@color/color_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="@string/error_something_went_wrong"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/dimen_20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parent_layout_loader"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:background="@color/color_background"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="@dimen/dimen_64dp"
                android:layout_height="@dimen/dimen_64dp"
                android:indeterminate="true"
                app:indicatorColor="@color/colorAccent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>